# sdp-par-model

./: .gitignore  .gitlab-ci.yml  .pylintrc  Makefile  gitlab-test  pyproject.toml  requirements.txt  setup.py
data/csv/: 2024-01-15-e1c2512_hpsos.csv  2024-01-15-e1c2512_pipelines.csv  2024-02-12-be33a51_hpsos.csv  2024-02-12-be33a51_pipelines.csv  2025-04-08-2cbd442_hpsos.csv  2025-04-08-2cbd442_pipelines.csv  custom_array.csv  custom_hpsos.csv  custom_max_mid_band1.csv  max_mid_band1.csv
data/layouts/: SKA1_Low_rev_04.txt  SKA1_Low_rev_04_AA05.txt  SKA1_Low_rev_04_AA1.txt  SKA1_Low_rev_04_AA2.txt  SKA1_Low_rev_04_AA3.txt  SKA1_Mid_rev_04_AA05.txt  SKA1_Mid_rev_04_AA1.txt  SKA1_Mid_rev_04_AA2.txt  SKA1_Mid_rev_04_AA3.txt  custom.txt
data/yaml/: all_custom_options.yml  custom.yml  example_low.yml  example_mid.yml  hpso01_DPrepD.yml  hpso01_ICal.yml  hpso_max_mid_band1_ICal.yml
data/yaml/max_mid_band1/: hpso_max_mid_band1_DPrepA.yml  hpso_max_mid_band1_DPrepA_Image.yml  hpso_max_mid_band1_DPrepB.yml  hpso_max_mid_band1_DPrepC.yml  hpso_max_mid_band1_DPrepD.yml  hpso_max_mid_band1_FastImg.yml  hpso_max_mid_band1_ICal.yml  hpso_max_mid_band1_Ingest.yml  hpso_max_mid_band1_RCal.yml
data/yaml/reduced_hpso_4b/: hpso_4b_FastImg.yml  hpso_4b_Ingest.yml  hpso_4b_PSS.yml  hpso_4b_RCal.yml
data/yaml/reduced_max_mid_band1/: hpso_max_mid_band1_DPrepA.yml  hpso_max_mid_band1_DPrepA_Image.yml  hpso_max_mid_band1_DPrepB.yml  hpso_max_mid_band1_DPrepC.yml  hpso_max_mid_band1_DPrepD.yml  hpso_max_mid_band1_FastImg.yml  hpso_max_mid_band1_ICal.yml  hpso_max_mid_band1_Ingest.yml  hpso_max_mid_band1_RCal.yml
docs/: conf.py
iPython/: SKA1_Scheduling_New.ipynb  SKA1_Sensitivity_Analysis.ipynb  SKA1_System_Sizing.ipynb
notebooks/: Absolute_Baseline_length_distribution.ipynb  SKA1_Document_Formulas.ipynb  SKA1_Export.ipynb  SKA1_Imaging_Performance_Model.ipynb  SKA1_SDP_Performance_Dashboard.ipynb  SKA1_SDP_Products.ipynb  SKA1_Scheduling.ipynb  SKA1_Scheduling_New.ipynb  SKA1_Sensitivity_Analysis.ipynb  SKA1_System_Sizing.ipynb  SKA1_Working_Sets.ipynb  Scheduling_Model_Input_SV_AA2_Low.ipynb  Scheduling_Model_Input_SV_AA2_Mid.ipynb  Scheduling_Model_Input_SV_AAstar_Mid.ipynb
sdp_par_model/: config.py  reports.py
sdp_par_model/parameters/: definitions.py  equations.py
sdp_par_model/scheduling/: efficiency.py  graph.py  scheduler.py  simulation.py
src/sdp_par_model/: config.py  evaluate.py  reports.py
src/sdp_par_model/parameters/: container.py  definitions.py  equations.py
src/sdp_par_model/scheduling/: efficiency.py  graph.py  level_trace.py  (+2 more)
tests/: test_container.py  test_evaluate.py  test_leveltrace.py  test_scheduler.py
(+1 files in other folders)
