[tool.poetry]
name = "ska-sdp-par-model"
version = "0.1.0"
description = "Python implementation of the SKA Science Data Processor parametric model."
authors = ["Peter Wortmann <Peter.Wortmann@skao.int>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.2.4"
scipy = "^1.15.2"
matplotlib = "^3.10.1"
ipywidgets = "^8.1.5"
graphviz = "^0.20.3"
pymp-pypi = "^0.5.0"
pylru = "^1.2.1"
sortedcontainers = "^2.4.0"
pyyaml = "^6.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
