[tool.poetry]
name = "ska-sdp-par-model"
version = "0.1.0"
description = "Python implementation of the SKA Science Data Processor parametric model."
authors = ["Peter Wortmann <Peter.Wortmann@skao.int>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.2.4"
scipy = "^1.15.2"
matplotlib = "^3.10.1"
ipywidgets = "^8.1.5"
graphviz = "^0.20.3"
pymp-pypi = "^0.5.0"
pylru = "^1.2.1"
sortedcontainers = "^2.4.0"
pyyaml = "^6.0.2"


[tool.poetry.group.dev.dependencies]
build = "^0.7.0"
black = "^23.12.1"
docutils = "^0.18"
pytest = "^8.3.0"
pytest-cov = "^4.1.0"
pytest-json-report = "^1.5.0"
pytest-pylint = "^0.21.0"
pylint-junit = "^0.3.4"
flake8 = "7.0.0"
bowler = "^0.7.0"
pylint = "^3.0.3"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
